Updated PyOorb demo for new python interfaces in oorb

--- a/PyOorb Demo.ipynb
+++ b/PyOorb Demo.ipynb
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "3"
       ]
      },
      "execution_count": 2,
@@ -36,7 +36,7 @@
    ],
    "source": [
     "# Initialize oorb\n",
-    "ephfile = os.path.join(os.getenv('OORB_DATA'), 'de405.dat')\n",
+    "ephfile = os.path.join(os.getenv('OORB_DATA'), 'de403.dat')\n",
     "oo.pyoorb.oorb_init(ephfile)"
    ]
   },
@@ -98,18 +98,15 @@
     {
      "data": {
       "text/plain": [
-       "array([[  0.00000000e+00,   2.72680464e+00,   1.43389847e-01,\n",
-       "          1.11295242e-01,   1.69610904e+00,   5.11783260e+00,\n",
-       "          5.37715237e+04,   2.00000000e+00,   5.44660000e+04,\n",
-       "          3.00000000e+00,   1.75820000e+01,   1.50000000e-01],\n",
-       "       [  1.00000000e+00,   2.64978782e+00,   5.60540098e-02,\n",
-       "          1.36881230e-01,   2.99464483e+00,   2.50204097e+00,\n",
-       "          5.49679725e+04,   2.00000000e+00,   5.44660000e+04,\n",
-       "          3.00000000e+00,   2.05140000e+01,   1.50000000e-01],\n",
-       "       [  2.00000000e+00,   2.82327567e+00,   8.02216088e-02,\n",
-       "          2.03150687e-01,   1.70781814e+00,   5.79273522e+00,\n",
-       "          5.36066833e+04,   2.00000000e+00,   5.44660000e+04,\n",
-       "          3.00000000e+00,   1.83040000e+01,   1.50000000e-01]])"
+       "array([[0.00000000e+00, 2.72680464e+00, 1.43389847e-01, 1.11295242e-01,\n",
+       "        1.69610904e+00, 5.11783260e+00, 5.37715237e+04, 2.00000000e+00,\n",
+       "        5.44660000e+04, 3.00000000e+00, 1.75820000e+01, 1.50000000e-01],\n",
+       "       [1.00000000e+00, 2.64978782e+00, 5.60540098e-02, 1.36881230e-01,\n",
+       "        2.99464483e+00, 2.50204097e+00, 5.49679725e+04, 2.00000000e+00,\n",
+       "        5.44660000e+04, 3.00000000e+00, 2.05140000e+01, 1.50000000e-01],\n",
+       "       [2.00000000e+00, 2.82327567e+00, 8.02216088e-02, 2.03150687e-01,\n",
+       "        1.70781814e+00, 5.79273522e+00, 5.36066833e+04, 2.00000000e+00,\n",
+       "        5.44660000e+04, 3.00000000e+00, 1.83040000e+01, 1.50000000e-01]])"
       ]
      },
      "execution_count": 5,
@@ -127,7 +124,23 @@
    "source": [
     "### Generate ephemerides\n",
     "\n",
-    "This does n-body propagation to the series of times specified."
+    "This does n-body or 2-body propagation to the series of times specified, using oorb_ephemeris_full or oorb_ephemeris_basic and specifying in_dynmodel = \"N\" or \"2\". \n",
+    "\n",
+    "Note that there are two ephemeris generation options -- `oorb_ephemeris_full` and `oorb_ephemeris_basic`. With the \"full\" version, you get the full Oorb ephemeris values (as would be returned by the command line). With the \"basic\" version, you get a stripped down set of orbital elements, containing only \n",
+    ">         ! (1) modified julian date\n",
+    "        ! (2) right ascension (deg)\n",
+    "        ! (3) declination (deg)\n",
+    "        ! (4) dra/dt sky-motion (deg/day, including cos(dec) factor)\n",
+    "        ! (5) ddec/dt sky-motion (deg/day)\n",
+    "        ! (6) solar phase angle (deg)\n",
+    "        ! (7) solar elongation angle (deg)\n",
+    "        ! (8) heliocentric distance (au)\n",
+    "        ! (9) geocentric distance (au)\n",
+    "        ! (10) predicted apparent V-band magnitude\n",
+    "        ! (11) true anomaly \n",
+    ">    \n",
+    "\n",
+    "Note that the shape of the arrays returned in either case is a multi-dimensional array of (object / times / eph@time ). "
    ]
   },
   {
@@ -140,9 +153,9 @@
     "times = [orbits[0][8], orbits[0][8] + offset]\n",
     "timescale = [timeScales['UTC']] * len(times)\n",
     "ephem_dates = np.array(list(zip(times, timescale)), dtype=np.double, order='F')\n",
-    "ephs, err = oo.pyoorb.oorb_ephemeris(in_orbits=orbits,\n",
-    "                                     in_obscode='I11',\n",
-    "                                     in_date_ephems=ephem_dates)\n",
+    "ephs, err = oo.pyoorb.oorb_ephemeris_full(in_orbits=orbits, in_dynmodel='N',\n",
+    "                                         in_obscode='I11',\n",
+    "                                         in_date_ephems=ephem_dates)\n",
     "if err != 0:\n",
     "    print(err)"
    ]
@@ -156,12 +169,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "@ 54466.000000 [  3.15354161e+00   1.82578901e+02   5.88067583e+00   2.36498517e+01\n",
-      "   5.44660000e+04   1.00000000e+00   1.04457019e-01  -3.41723209e-03\n",
-      "   1.62736035e+01   9.97366501e+01]\n",
-      "@ 54496.000000 [  2.77919808e+00   1.83595895e+02   6.69572318e+00   2.32687274e+01\n",
-      "   5.44960000e+04   1.00000000e+00  -3.43432547e-02   5.77223374e-02\n",
-      "   1.26202699e+01   1.29325279e+02]\n"
+      "@ 54466.000000 [ 5.44660000e+04  1.82578901e+02  5.88067581e+00  1.04457023e-01\n",
+      " -3.41723035e-03  1.62736031e+01  9.97366497e+01  3.45839825e+00\n",
+      "  3.15354150e+00  2.36498516e+01  9.18737187e+01  1.80017867e+02\n",
+      "  6.41945377e+00  8.02010329e+01  6.42190219e+00  1.63659807e+02\n",
+      "  5.85080877e+00  6.38429728e+01  5.85325719e+00 -5.51502279e+01\n",
+      " -3.21957926e+00 -4.77527098e+01  4.36034683e-01  1.96617818e+01\n",
+      " -3.30141908e+00  9.67916978e-01  3.52543923e-01 -3.39966388e-03\n",
+      " -8.14672055e-03  4.90750232e-04 -1.67650276e-01  9.68894212e-01\n",
+      " -4.20190092e-05  1.33382199e+02]\n",
+      "@ 54496.000000 [ 5.44960000e+04  1.83595895e+02  6.69572325e+00 -3.43432561e-02\n",
+      "  5.77223431e-02  1.26202682e+01  1.29325279e+02  3.48774043e+00\n",
+      "  2.77919798e+00  2.32687273e+01  3.29248482e+02  1.80622608e+02\n",
+      "  7.57092179e+00  5.02602926e+01  7.57334218e+00  1.68007840e+02\n",
+      "  6.02574931e+00  3.76455244e+01  6.02816970e+00 -3.33027149e+01\n",
+      " -4.29243384e+00 -3.65275117e+01  4.25902627e-01  4.96610420e+01\n",
+      " -3.39277428e+00  7.20671228e-01  3.66126950e-01 -2.69001492e-03\n",
+      " -8.32564977e-03  4.14561445e-04 -6.37966424e-01  7.50607694e-01\n",
+      " -4.16141468e-05  1.37710116e+02]\n"
      ]
     }
    ],
@@ -191,12 +216,12 @@
      "text": [
       "Transforming from COM to CART\n",
       "Input and output orbital elements (COM / CART)\n",
-      "in  [  0.00000000e+00   2.72680464e+00   1.43389847e-01   1.11295242e-01\n",
-      "   1.69610904e+00   5.11783260e+00   5.37715237e+04   2.00000000e+00\n",
-      "   5.44660000e+04   3.00000000e+00   1.75820000e+01   1.50000000e-01]\n",
-      "out [  0.00000000e+00  -3.30147843e+00   9.67774744e-01   3.52552490e-01\n",
-      "  -3.39925149e-03  -8.14684133e-03   4.90706192e-04   1.00000000e+00\n",
-      "   5.44660000e+04   3.00000000e+00   1.75820000e+01   1.50000000e-01]\n"
+      "in  [0.00000000e+00 2.72680464e+00 1.43389847e-01 1.11295242e-01\n",
+      " 1.69610904e+00 5.11783260e+00 5.37715237e+04 2.00000000e+00\n",
+      " 5.44660000e+04 3.00000000e+00 1.75820000e+01 1.50000000e-01]\n",
+      "out [ 0.00000000e+00 -3.30147843e+00  9.67774744e-01  3.52552490e-01\n",
+      " -3.39925149e-03 -8.14684133e-03  4.90706192e-04  1.00000000e+00\n",
+      "  5.44660000e+04  3.00000000e+00  1.75820000e+01  1.50000000e-01]\n"
      ]
     }
    ],
@@ -222,12 +247,12 @@
      "text": [
       "Transforming back from CART to COM\n",
       "Input and output orbital elements (CART / COM)\n",
-      "in  [  0.00000000e+00  -3.30147843e+00   9.67774744e-01   3.52552490e-01\n",
-      "  -3.39925149e-03  -8.14684133e-03   4.90706192e-04   1.00000000e+00\n",
-      "   5.44660000e+04   3.00000000e+00   1.75820000e+01   1.50000000e-01]\n",
-      "out [  0.00000000e+00   2.72680464e+00   1.43389847e-01   1.11295242e-01\n",
-      "   1.69610904e+00   5.11783260e+00   5.37715237e+04   2.00000000e+00\n",
-      "   5.44660000e+04   3.00000000e+00   1.75820000e+01   1.50000000e-01]\n"
+      "in  [ 0.00000000e+00 -3.30147843e+00  9.67774744e-01  3.52552490e-01\n",
+      " -3.39925149e-03 -8.14684133e-03  4.90706192e-04  1.00000000e+00\n",
+      "  5.44660000e+04  3.00000000e+00  1.75820000e+01  1.50000000e-01]\n",
+      "out [0.00000000e+00 2.72680464e+00 1.43389847e-01 1.11295242e-01\n",
+      " 1.69610904e+00 5.11783260e+00 5.37715237e+04 2.00000000e+00\n",
+      " 5.44660000e+04 3.00000000e+00 1.75820000e+01 1.50000000e-01]\n"
      ]
     }
    ],
@@ -251,15 +276,15 @@
      "output_type": "stream",
      "text": [
       "Differences in the initial/final COM orb elements\n",
-      "[[  0.00000000e+00  -1.73194792e-14   3.21964677e-15   2.35922393e-16\n",
-      "   -4.44089210e-16   0.00000000e+00   0.00000000e+00   0.00000000e+00\n",
-      "    0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00]\n",
-      " [  0.00000000e+00  -2.13162821e-14   3.71924713e-15   1.66533454e-16\n",
-      "   -1.02140518e-14   5.63993297e-14   1.45519152e-11   0.00000000e+00\n",
-      "    0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00]\n",
-      " [  0.00000000e+00  -2.57571742e-14   3.15025783e-15   1.66533454e-16\n",
-      "    0.00000000e+00   7.72715225e-14   2.18278728e-11   0.00000000e+00\n",
-      "    0.00000000e+00   0.00000000e+00   0.00000000e+00   0.00000000e+00]]\n"
+      "[[ 0.00000000e+00 -1.73194792e-14  3.21964677e-15 -7.63278329e-16\n",
+      "   6.66133815e-16 -1.77635684e-15  0.00000000e+00  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
+      " [ 0.00000000e+00 -2.08721929e-14  3.63598041e-15  9.99200722e-16\n",
+      "  -5.15143483e-14  9.90318938e-14  1.45519152e-11  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
+      " [ 0.00000000e+00 -2.53130850e-14  3.05311332e-15  1.66533454e-16\n",
+      "  -2.22044605e-16  7.63833441e-14  2.91038305e-11  0.00000000e+00\n",
+      "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n"
      ]
     }
    ],
@@ -282,8 +307,7 @@
    "source": [
     "### Propagate orbits\n",
     "\n",
-    "You can do both n-body and 2-body propagation (swap \\_nb to \\_2b). \n",
-    "At the moment, oorb\\_propagation\\* crashes if you use anything other than CART (cartesian) elements. So transform first."
+    "You can do either n-body or 2-body propagation using the oorb_propagation method and specifying the in_dynmodel as \"N\" or \"2\". "
    ]
   },
   {
@@ -297,12 +321,12 @@
      "text": [
       "Propagating orbits by 30 days\n",
       "Input and output orbital elements (0 and 30 days)\n",
-      "in  [  0.00000000e+00   2.72680464e+00   1.43389847e-01   1.11295242e-01\n",
-      "   1.69610904e+00   5.11783260e+00   5.37715237e+04   2.00000000e+00\n",
-      "   5.44660000e+04   3.00000000e+00   1.75820000e+01   1.50000000e-01]\n",
-      "out [  0.00000000e+00  -3.39281543e+00   7.20543871e-01   3.66133292e-01\n",
-      "  -2.68965290e-03  -8.32572656e-03   4.14522375e-04   1.00000000e+00\n",
-      "   5.44960000e+04   3.00000000e+00   1.75820000e+01   1.50000000e-01]\n"
+      "in  [0.00000000e+00 2.72680464e+00 1.43389847e-01 1.11295242e-01\n",
+      " 1.69610904e+00 5.11783260e+00 5.37715237e+04 2.00000000e+00\n",
+      " 5.44660000e+04 3.00000000e+00 1.75820000e+01 1.50000000e-01]\n",
+      "out [ 0.00000000e+00 -3.39281543e+00  7.20543871e-01  3.66133292e-01\n",
+      " -2.68965290e-03 -8.32572656e-03  4.14522375e-04  1.00000000e+00\n",
+      "  5.44960000e+04  3.00000000e+00  1.75820000e+01  1.50000000e-01]\n"
      ]
     }
    ],
@@ -313,7 +337,7 @@
     "newEpoch = np.array([epoch_new, timeScales['TT']], dtype='double', order='F')\n",
     "# Note that currently you have to use CART format elements.\n",
     "elems = newElems\n",
-    "newOorbElems, err = oo.pyoorb.oorb_propagation_nb(in_orbits=elems, in_epoch=newEpoch)\n",
+    "newOorbElems, err = oo.pyoorb.oorb_propagation(in_orbits=elems, in_dynmodel='N', in_epoch=newEpoch)\n",
     "if err != 0:\n",
     "    print(\"error\", err)\n",
     "print(\"Input and output orbital elements (0 and %d days)\" % (offset))\n",
@@ -332,12 +356,12 @@
      "text": [
       "Transforming new orbital elements to COM\n",
       "Input and output orbital elements (CART/COM)\n",
-      "in  [  0.00000000e+00   2.72680464e+00   1.43389847e-01   1.11295242e-01\n",
-      "   1.69610904e+00   5.11783260e+00   5.37715237e+04   2.00000000e+00\n",
-      "   5.44660000e+04   3.00000000e+00   1.75820000e+01   1.50000000e-01]\n",
-      "out [  0.00000000e+00   2.72662741e+00   1.43413828e-01   1.11295174e-01\n",
-      "   1.69610744e+00   5.11761118e+00   5.37714875e+04   2.00000000e+00\n",
-      "   5.44960000e+04   3.00000000e+00   1.75820000e+01   1.50000000e-01]\n",
+      "in  [0.00000000e+00 2.72680464e+00 1.43389847e-01 1.11295242e-01\n",
+      " 1.69610904e+00 5.11783260e+00 5.37715237e+04 2.00000000e+00\n",
+      " 5.44660000e+04 3.00000000e+00 1.75820000e+01 1.50000000e-01]\n",
+      "out [0.00000000e+00 2.72662741e+00 1.43413828e-01 1.11295174e-01\n",
+      " 1.69610744e+00 5.11761118e+00 5.37714875e+04 2.00000000e+00\n",
+      " 5.44960000e+04 3.00000000e+00 1.75820000e+01 1.50000000e-01]\n",
       "epoch 54496.0 54496.0\n"
      ]
     }
@@ -363,37 +387,37 @@
      "output_type": "stream",
      "text": [
       "Object 0\n",
-      " Orbit:  [  0.00000000e+00   2.72680464e+00   1.43389847e-01   1.11295242e-01\n",
-      "   1.69610904e+00   5.11783260e+00   5.37715237e+04   2.00000000e+00\n",
-      "   5.44660000e+04   3.00000000e+00   1.75820000e+01   1.50000000e-01]\n",
-      "Just difference in mas in RA and then Dec\n",
-      "  [  2.54772203e-05   2.91606739e-05] [ -1.07913678e-05  -1.26618716e-05]\n",
+      " Orbit:  [0.00000000e+00 2.72680464e+00 1.43389847e-01 1.11295242e-01\n",
+      " 1.69610904e+00 5.11783260e+00 5.37715237e+04 2.00000000e+00\n",
+      " 5.44660000e+04 3.00000000e+00 1.75820000e+01 1.50000000e-01]\n",
+      "Just difference in milli-arcseconds in RA and then Dec\n",
+      "  [2.69096745e-05 3.14116733e-05] [-1.13029586e-05 -1.32533984e-05]\n",
       "Object 1\n",
-      " Orbit:  [  1.00000000e+00   2.64978782e+00   5.60540098e-02   1.36881230e-01\n",
-      "   2.99464483e+00   2.50204097e+00   5.49679725e+04   2.00000000e+00\n",
-      "   5.44660000e+04   3.00000000e+00   2.05140000e+01   1.50000000e-01]\n",
-      "Just difference in mas in RA and then Dec\n",
-      "  [  2.53749022e-05   2.92629920e-05] [ -5.07753839e-06  -4.98161512e-06]\n",
+      " Orbit:  [1.00000000e+00 2.64978782e+00 5.60540098e-02 1.36881230e-01\n",
+      " 2.99464483e+00 2.50204097e+00 5.49679725e+04 2.00000000e+00\n",
+      " 5.44660000e+04 3.00000000e+00 2.05140000e+01 1.50000000e-01]\n",
+      "Just difference in milli-arcseconds in RA and then Dec\n",
+      "  [2.62957656e-05 3.01838554e-05] [-4.89848162e-06 -4.71942485e-06]\n",
       "Object 2\n",
-      " Orbit:  [  2.00000000e+00   2.82327567e+00   8.02216088e-02   2.03150687e-01\n",
-      "   1.70781814e+00   5.79273522e+00   5.36066833e+04   2.00000000e+00\n",
-      "   5.44660000e+04   3.00000000e+00   1.83040000e+01   1.50000000e-01]\n",
-      "Just difference in mas in RA and then Dec\n",
-      "  [  1.33013600e-06   1.33013600e-06] [ -4.47641924e-07  -4.66826577e-07]\n"
+      " Orbit:  [2.00000000e+00 2.82327567e+00 8.02216088e-02 2.03150687e-01\n",
+      " 1.70781814e+00 5.79273522e+00 5.36066833e+04 2.00000000e+00\n",
+      " 5.44660000e+04 3.00000000e+00 1.83040000e+01 1.50000000e-01]\n",
+      "Just difference in milli-arcseconds in RA and then Dec\n",
+      "  [-2.55795385e-06 -2.96722646e-06] [8.76099193e-07 8.12150347e-07]\n"
      ]
     }
    ],
    "source": [
     "# Generate ephemerides with these new elements, to compare.\n",
-    "ephs2, err = oo.pyoorb.oorb_ephemeris(in_orbits=newElems3, in_obscode='I11',\n",
-    "                                     in_date_ephems=ephem_dates)\n",
+    "ephs2, err = oo.pyoorb.oorb_ephemeris_full(in_orbits=newElems3, in_obscode='I11',\n",
+    "                                           in_dynmodel='N', in_date_ephems=ephem_dates)\n",
     "for i in range(len(newElems3)):\n",
     "    print('Object %d' % i)\n",
     "    print(' Orbit: ', orbits[i] )\n",
     "    diffs = ephs[i] - ephs2[i]\n",
     "    #print(\"Difference in ephemerides from ephemeris generation vs propagation + ephemeris generation\")\n",
     "    #print(diffs)\n",
-    "    print(\"Just difference in mas in RA and then Dec\")\n",
+    "    print(\"Just difference in milli-arcseconds in RA and then Dec\")\n",
     "    deltaRA = diffs[:,1] * 3600. * 1000.\n",
     "    deltaDec = diffs[:,2] * 3600. * 1000.\n",
     "    print(' ', deltaRA, deltaDec)"
@@ -403,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that the difference can change depending on the length of time in 'offset'. Needs a bit further investigation, but I suspect this is due to the timescale of integration hard-coded into the different routines (?). "
+    "Note that the difference can change slightly depending on the length of time in 'offset'. Needs a bit further investigation, but I suspect this is due to the timescale of integration hard-coded into the different routines (?). "
    ]
   },
   {
@@ -430,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
