Update NICFPS notebook with sample sequences

--- a/TUI Tracking.ipynb
+++ b/TUI Tracking.ipynb
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -548,17 +548,17 @@
       "dmag asteroid (color) Z - J 0.4\n",
       "Offset Z to J 0.49999999999999856\n",
       "SNR change for change in exposure time of goal ratio 1 : 0.630957344480194\n",
-      "SNR change for change in exposure time of  achieved ratio  0.625 : 0.49881557874222054\n",
+      "SNR change for change in exposure time of  achieved ratio  1.5625 : 0.7886966806002426\n",
       "dmag apo m5 (sensitivity) Z to H 1.6999999999999993\n",
       "dmag asteroid (color) Z - H 0.5\n",
       "Offset Z to H 1.1999999999999993\n",
       "SNR change for change in exposure time of goal ratio 1.5 : 0.40555114279394894\n",
-      "SNR change for change in exposure time of  achieved ratio  0.78125 : 0.2926813268278085\n",
+      "SNR change for change in exposure time of  achieved ratio  1.5625 : 0.4139139018532392\n",
       "dmag apo m5 (sensitivity) Z to K 2.3000000000000007\n",
       "dmag asteroid (color) Z - K 0.7\n",
       "Offset Z to K 1.6000000000000008\n",
       "SNR change for change in exposure time of goal ratio 1.5 : 0.28057284087642154\n",
-      "SNR change for change in exposure time of  achieved ratio  0.78125 : 0.20248600650912502\n"
+      "SNR change for change in exposure time of  achieved ratio  1.5625 : 0.2863584565959714\n"
      ]
     }
    ],
@@ -622,10 +622,10 @@
     "print('')\n",
     "\n",
     "achieved_ratios = {}\n",
-    "achieved_ratios['Y'] = 4 * 3 * exptime['Y']\n",
-    "achieved_ratios['J'] = 5 * 2 * exptime['J']/(4*2*exptime['Y'])\n",
-    "achieved_ratios['H'] = 5 * 5 * exptime['H']/(4*2*exptime['Y'])\n",
-    "achieved_ratios['K'] = 5 * 5 * exptime['K']/(4*2*exptime['Y'])\n",
+    "achieved_ratios['Y'] = 4 * (1+1) * exptime['Y']\n",
+    "achieved_ratios['J'] = 5 * (2+3) * exptime['J']/(4*2*exptime['Y'])\n",
+    "achieved_ratios['H'] = 5 * (5+5) * exptime['H']/(4*2*exptime['Y'])\n",
+    "achieved_ratios['K'] = 5 * (5+5) * exptime['K']/(4*2*exptime['Y'])\n",
     "\n",
     "# So what's the loss in SNR, instead?\n",
     "for f1, f2 in zip(['Z', 'Z', 'Z'], ['J', 'H', 'K']):\n",
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -648,39 +648,40 @@
      "output_type": "stream",
      "text": [
       "Filter Nexp Onsky time\n",
-      "Y 11.740331491712707 11 939.2265193370166\n",
-      "J 23.480662983425415 23 939.2265193370166\n",
-      "H 46.96132596685083 46 939.2265193370166\n",
-      "K 46.96132596685083 46 939.2265193370166\n",
-      "Time on sky / walltime / available  3756.9060773480664 5164.57182320442 5100\n",
-      "{'Y': 2, 'J': 4, 'H': 9, 'K': 9}\n",
-      "sequence total wall time 84.63833333333334\n",
+      "Y 10.669456066945608 10 853.5564853556486\n",
+      "J 21.338912133891217 21 853.5564853556486\n",
+      "H 42.677824267782434 42 853.5564853556486\n",
+      "K 85.35564853556487 85 853.5564853556486\n",
+      "Time on sky / walltime / available  3414.2259414225946 5158.682008368201 5100\n",
+      "{'Y': 2, 'J': 4, 'H': 8, 'K': 17}\n",
+      "sequence total wall time 83.27166666666668\n",
       "\n",
       "dmag apo m5 (sensitivity) Z to J 0.8999999999999986\n",
       "dmag asteroid (color) Z - J 0.4\n",
       "Offset Z to J 0.49999999999999856\n",
       "SNR change for change in exposure time of goal ratio 1 : 0.630957344480194\n",
-      "SNR change for change in exposure time of  achieved ratio  0.625 : 0.49881557874222054\n",
+      "SNR change for change in exposure time of  achieved ratio  1.5625 : 0.7886966806002426\n",
       "dmag apo m5 (sensitivity) Z to H 1.6999999999999993\n",
       "dmag asteroid (color) Z - H 0.5\n",
       "Offset Z to H 1.1999999999999993\n",
       "SNR change for change in exposure time of goal ratio 1 : 0.33113112148259133\n",
-      "SNR change for change in exposure time of  achieved ratio  0.625 : 0.26178213701272507\n",
+      "SNR change for change in exposure time of  achieved ratio  1.25 : 0.3702158485504076\n",
       "dmag apo m5 (sensitivity) Z to K 2.3000000000000007\n",
       "dmag asteroid (color) Z - K 0.7\n",
       "Offset Z to K 1.6000000000000008\n",
       "SNR change for change in exposure time of goal ratio 1 : 0.22908676527677713\n",
-      "SNR change for change in exposure time of  achieved ratio  0.78125 : 0.20248600650912502\n"
+      "SNR change for change in exposure time of  achieved ratio  1.09375 : 0.23958467389384236\n"
      ]
     }
    ],
    "source": [
     "# exposures - on-sky + readout (NFS=8 JHK - +10.9s, NFS=0 Y - +5.4s)\n",
+    "# with 10s visits in K\n",
     "exptime = {}\n",
     "exptime['Y'] = 80 \n",
     "exptime['J'] = 40 \n",
     "exptime['H'] = 20 \n",
-    "exptime['K'] = 20\n",
+    "exptime['K'] = 10\n",
     "\n",
     "ratios = {}\n",
     "ratios['Y'] = 1\n",
@@ -722,11 +723,11 @@
     "print(Nseq)\n",
     "\n",
     "sequence = 4*(exptime['Y'] + read_y) + \\\n",
-    "            5*5*(exptime['K'] + read) + \\\n",
+    "            5*7*(exptime['K'] + read) + \\\n",
     "            5*4*(exptime['H'] + read) + \\\n",
     "            5*2*(exptime['J'] + read) + \\\n",
     "            4*(exptime['Y'] + read_y) + \\\n",
-    "            5*5*(exptime['K'] + read) + \\\n",
+    "            5*7*(exptime['K'] + read) + \\\n",
     "            5*4*(exptime['H'] + read) + \\\n",
     "            5*3*(exptime['J'] + read) + \\\n",
     "            4*(exptime['Y'] + read_y) \n",
@@ -736,10 +737,10 @@
     "\n",
     "# Compare against fixed 'value' (because we're trying to compare loss of SNR here vs. above)\n",
     "achieved_ratios = {}\n",
-    "achieved_ratios['Y'] = 4 * 3 * exptime['Y']\n",
-    "achieved_ratios['J'] = 5 * 2 * exptime['J']/(4*2*exptime['Y'])\n",
-    "achieved_ratios['H'] = 5 * 4 * exptime['H']/(4*2*exptime['Y'])\n",
-    "achieved_ratios['K'] = 5 * 5 * exptime['K']/(4*2*exptime['Y'])\n",
+    "achieved_ratios['Y'] = 4 * (1+1+1)* exptime['Y']\n",
+    "achieved_ratios['J'] = 5 * (2+3) * exptime['J']/(4*2*exptime['Y'])\n",
+    "achieved_ratios['H'] = 5 * (4+4) * exptime['H']/(4*2*exptime['Y'])\n",
+    "achieved_ratios['K'] = 5 * (7+7) * exptime['K']/(4*2*exptime['Y'])\n",
     "\n",
     "# So what's the loss in SNR, instead?\n",
     "for f1, f2 in zip(['Z', 'Z', 'Z'], ['J', 'H', 'K']):\n",
