--- a/Filter Characteristics.ipynb
+++ b/Filter Characteristics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +180,7 @@
        "Max_wavelength  1099.000000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -188,6 +188,31 @@
    "source": [
     "pd.DataFrame([lsst.drop_peak_blue, lsst.effsb, lsst.drop_peak_red], \n",
     "             index=['Min_wavelength', 'Eff_wavelength', 'Max_wavelength'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "FilterDefinition(physical_filter=\"u\", abstract_filter=\"u\", lambdaEff=368.48, lambdaMin=320.00, lambdaMax=408.60),\n",
+      "FilterDefinition(physical_filter=\"g\", abstract_filter=\"g\", lambdaEff=480.20, lambdaMin=386.40, lambdaMax=567.00),\n",
+      "FilterDefinition(physical_filter=\"r\", abstract_filter=\"r\", lambdaEff=623.12, lambdaMin=537.00, lambdaMax=706.00),\n",
+      "FilterDefinition(physical_filter=\"i\", abstract_filter=\"i\", lambdaEff=754.17, lambdaMin=676.00, lambdaMax=833.00),\n",
+      "FilterDefinition(physical_filter=\"z\", abstract_filter=\"z\", lambdaEff=869.05, lambdaMin=803.00, lambdaMax=938.60),\n",
+      "FilterDefinition(physical_filter=\"y\", abstract_filter=\"y\", lambdaEff=973.64, lambdaMin=908.40, lambdaMax=1099.00),\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write in format for obs_lsst/python/lsst/obs/translators/filters.py\n",
+    "for f in ('u', 'g', 'r', 'i', 'z', 'y'):\n",
+    "    print(f'FilterDefinition(physical_filter=\"{f}\", abstract_filter=\"{f}\", \\\n",
+    "lambdaEff={lsst.effsb[f]:.2f}, lambdaMin={lsst.drop_peak_blue[f]:.2f}, lambdaMax={lsst.drop_peak_red[f]:.2f}),')"
    ]
   },
   {
