Add download location to notebook

--- a/TDE comparison.ipynb
+++ b/TDE comparison.ipynb
@@ -16,6 +16,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Can download the science_comp_1_4.csv, science_comp_1_5.csv, and science_comp_1_6.csv files at \n",
+    "# https://epyc.astro.washington.edu/~lynnej/opsim_downloads/"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
