Add legend U-leak notebook

--- a/U-leak.ipynb
+++ b/U-leak.ipynb
@@ -650,7 +650,7 @@
     "    for n in colors:\n",
     "        for d in ['detector']:\n",
     "            plt.plot(airmasses, mags[n][d]['filters'][f], \n",
-    "                     linestyle=linestyles[fi], color=colors[n], label=f'{n}')\n",
+    "                     linestyle=linestyles['filters'], color=colors[n], label=f'{n}')\n",
     "    plt.legend(loc=(1.01, 0.1))\n",
     "    plt.xlabel('Airmass', fontsize='x-large')\n",
     "    plt.ylabel('dM - dM(X-1) [mmag]', fontsize='x-large')\n",
