--- a/PyOorb Demo.ipynb
+++ b/PyOorb Demo.ipynb
@@ -26,7 +26,7 @@
     {
      "data": {
       "text/plain": [
-       "3"
+       "0"
       ]
      },
      "execution_count": 2,
@@ -35,8 +35,10 @@
     }
    ],
    "source": [
-    "# Initialize oorb\n",
-    "ephfile = os.path.join(os.getenv('OORB_DATA'), 'de403.dat')\n",
+    "# Initialize oorb -- for a conda installed version\n",
+    "ephfile = os.path.join(os.getenv('CONDA_PREFIX'), 'share', 'openorb', 'de430.dat')\n",
+    "# If using a non-conda version, use \n",
+    "# ephfile = os.path.join(os.getenv('OORB_DATA'), 'de430.dat')\n",
     "oo.pyoorb.oorb_init(ephfile)"
    ]
   },
@@ -47,7 +49,7 @@
    "outputs": [],
    "source": [
     "timeScales = {'UTC': 1, 'UT1': 2, 'TT': 3, 'TAI': 4}\n",
-    "elemType = {'CART': 1, 'COM': 2, 'KEP': 3, 'DEL': 4, 'EQX': 5}"
+    "elemType = {'CAR': 1, 'COM': 2, 'KEP': 3, 'DEL': 4, 'EQX': 5}"
    ]
   },
   {
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +69,7 @@
     "# orb is id, 6 elements, epoch_mjd, H, G, element type index\n",
     "# keplerian appears to be element type index 3\n",
     "# orbits = numpy.array([0.,1.,2.,3.,4.,5.,6.,5373.,1.,1.,3.])\n",
+    "# Note that angles should be RADIANS for input to the python oorb interface\n",
     "o = np.loadtxt('test.des', dtype=([('objid', np.str_, 20), ('format', np.str_, 3),\n",
     "                                   ('q', float), ('e', float), ('inc', float), ('Omega', float),\n",
     "                                   ('argperi', float), ('tperi', float), ('H', float), ('epoch', float),\n",
@@ -77,39 +80,40 @@
     "orbits[:, 0] = np.arange(0, len(o), 1, dtype=float)\n",
     "orbits[:, 1] = o['q']\n",
     "orbits[:, 2] = o['e']\n",
-    "orbits[:, 3] = o['inc']\n",
-    "orbits[:, 4] = o['Omega']\n",
-    "orbits[:, 5] = o['argperi']\n",
+    "orbits[:, 3] = -1 * np.radians(o['inc'])\n",
+    "orbits[:, 4] = np.radians(o['Omega'])\n",
+    "orbits[:, 5] = np.radians(o['argperi'])\n",
     "orbits[:, 6] = o['tperi']\n",
     "orbits[:, 7] = np.zeros(len(o), float) + elemType['COM']\n",
     "orbits[:, 8] = o['epoch']\n",
     "orbits[:, 9] = np.zeros(len(o), float) + timeScales['TT']\n",
     "orbits[:, 10] = o['H']\n",
-    "orbits[:, 11] = np.zeros(len(o)) + 0.15\n",
-    "for i in range(3, 6):\n",
-    "    orbits[:, i] = np.radians(orbits[:, i])"
+    "orbits[:, 11] = np.zeros(len(o)) + 0.15"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.00000000e+00, 2.72680464e+00, 1.43389847e-01, 1.11295242e-01,\n",
-       "        1.69610904e+00, 5.11783260e+00, 5.37715237e+04, 2.00000000e+00,\n",
-       "        5.44660000e+04, 3.00000000e+00, 1.75820000e+01, 1.50000000e-01],\n",
-       "       [1.00000000e+00, 2.64978782e+00, 5.60540098e-02, 1.36881230e-01,\n",
-       "        2.99464483e+00, 2.50204097e+00, 5.49679725e+04, 2.00000000e+00,\n",
-       "        5.44660000e+04, 3.00000000e+00, 2.05140000e+01, 1.50000000e-01],\n",
-       "       [2.00000000e+00, 2.82327567e+00, 8.02216088e-02, 2.03150687e-01,\n",
-       "        1.70781814e+00, 5.79273522e+00, 5.36066833e+04, 2.00000000e+00,\n",
-       "        5.44660000e+04, 3.00000000e+00, 1.83040000e+01, 1.50000000e-01]])"
+       "array([[ 0.00000000e+00,  2.72680464e+00,  1.43389847e-01,\n",
+       "        -1.11295242e-01,  1.69610904e+00,  5.11783260e+00,\n",
+       "         5.37715237e+04,  2.00000000e+00,  5.44660000e+04,\n",
+       "         3.00000000e+00,  1.75820000e+01,  1.50000000e-01],\n",
+       "       [ 1.00000000e+00,  2.64978782e+00,  5.60540098e-02,\n",
+       "        -1.36881230e-01,  2.99464483e+00,  2.50204097e+00,\n",
+       "         5.49679725e+04,  2.00000000e+00,  5.44660000e+04,\n",
+       "         3.00000000e+00,  2.05140000e+01,  1.50000000e-01],\n",
+       "       [ 2.00000000e+00,  2.82327567e+00,  8.02216088e-02,\n",
+       "        -2.03150687e-01,  1.70781814e+00,  5.79273522e+00,\n",
+       "         5.36066833e+04,  2.00000000e+00,  5.44660000e+04,\n",
+       "         3.00000000e+00,  1.83040000e+01,  1.50000000e-01]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,8 +218,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transforming from COM to CART\n",
-      "Input and output orbital elements (COM / CART)\n",
+      "Transforming from COM to CAR\n",
+      "Input and output orbital elements (COM / CAR)\n",
       "in  [0.00000000e+00 2.72680464e+00 1.43389847e-01 1.11295242e-01\n",
       " 1.69610904e+00 5.11783260e+00 5.37715237e+04 2.00000000e+00\n",
       " 5.44660000e+04 3.00000000e+00 1.75820000e+01 1.50000000e-01]\n",
@@ -226,12 +230,12 @@
     }
    ],
    "source": [
-    "type2 = 'CART'\n",
+    "type2 = 'CAR'\n",
     "print(\"Transforming from COM to %s\" % (type2))\n",
     "newElems, err = oo.pyoorb.oorb_element_transformation(in_orbits=orbits, in_element_type=elemType[type2])\n",
     "if err != 0:\n",
     "    print(\"error\", err)\n",
-    "print(\"Input and output orbital elements (COM / CART)\")\n",
+    "print(\"Input and output orbital elements (COM / CAR)\")\n",
     "print(\"in \", orbits[i])\n",
     "print(\"out\", newElems[i])"
    ]
@@ -245,8 +249,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Transforming back from CART to COM\n",
-      "Input and output orbital elements (CART / COM)\n",
+      "Transforming back from CAR to COM\n",
+      "Input and output orbital elements (CAR / COM)\n",
       "in  [ 0.00000000e+00 -3.30147843e+00  9.67774744e-01  3.52552490e-01\n",
       " -3.39925149e-03 -8.14684133e-03  4.90706192e-04  1.00000000e+00\n",
       "  5.44660000e+04  3.00000000e+00  1.75820000e+01  1.50000000e-01]\n",
@@ -261,7 +265,7 @@
     "newElems2, err = oo.pyoorb.oorb_element_transformation(in_orbits=newElems, in_element_type=elemType['COM'])\n",
     "if err != 0:\n",
     "    print(\"error\", err)\n",
-    "print(\"Input and output orbital elements (CART / COM)\")\n",
+    "print(\"Input and output orbital elements (CAR / COM)\")\n",
     "print(\"in \", newElems[i])\n",
     "print(\"out\", newElems2[i])"
    ]
@@ -276,14 +280,14 @@
      "output_type": "stream",
      "text": [
       "Differences in the initial/final COM orb elements\n",
-      "[[ 0.00000000e+00 -1.73194792e-14  3.21964677e-15 -7.63278329e-16\n",
-      "   6.66133815e-16 -1.77635684e-15  0.00000000e+00  0.00000000e+00\n",
+      "[[ 0.00000000e+00 -2.66453526e-15  8.32667268e-17  2.35922393e-16\n",
+      "  -4.44089210e-16 -2.66453526e-15  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00 -2.08721929e-14  3.63598041e-15  9.99200722e-16\n",
-      "  -5.15143483e-14  9.90318938e-14  1.45519152e-11  0.00000000e+00\n",
+      " [ 0.00000000e+00  2.22044605e-15  2.28983499e-16 -6.38378239e-16\n",
+      "   3.10862447e-14 -4.04121181e-14  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]\n",
-      " [ 0.00000000e+00 -2.53130850e-14  3.05311332e-15  1.66533454e-16\n",
-      "  -2.22044605e-16  7.63833441e-14  2.91038305e-11  0.00000000e+00\n",
+      " [ 0.00000000e+00  9.76996262e-15 -1.17961196e-15 -3.88578059e-16\n",
+      "   2.22044605e-16  7.10542736e-15  0.00000000e+00  0.00000000e+00\n",
       "   0.00000000e+00  0.00000000e+00  0.00000000e+00  0.00000000e+00]]\n"
      ]
     }
@@ -391,19 +395,19 @@
       " 1.69610904e+00 5.11783260e+00 5.37715237e+04 2.00000000e+00\n",
       " 5.44660000e+04 3.00000000e+00 1.75820000e+01 1.50000000e-01]\n",
       "Just difference in milli-arcseconds in RA and then Dec\n",
-      "  [2.69096745e-05 3.14116733e-05] [-1.13029586e-05 -1.32533984e-05]\n",
+      "  [2.49656296e-05 2.95699465e-05] [-1.07721831e-05 -1.25819355e-05]\n",
       "Object 1\n",
       " Orbit:  [1.00000000e+00 2.64978782e+00 5.60540098e-02 1.36881230e-01\n",
       " 2.99464483e+00 2.50204097e+00 5.49679725e+04 2.00000000e+00\n",
       " 5.44660000e+04 3.00000000e+00 2.05140000e+01 1.50000000e-01]\n",
       "Just difference in milli-arcseconds in RA and then Dec\n",
-      "  [2.62957656e-05 3.01838554e-05] [-4.89848162e-06 -4.71942485e-06]\n",
+      "  [2.39424480e-05 2.74212653e-05] [-5.46762635e-06 -5.38449285e-06]\n",
       "Object 2\n",
       " Orbit:  [2.00000000e+00 2.82327567e+00 8.02216088e-02 2.03150687e-01\n",
       " 1.70781814e+00 5.79273522e+00 5.36066833e+04 2.00000000e+00\n",
       " 5.44660000e+04 3.00000000e+00 1.83040000e+01 1.50000000e-01]\n",
       "Just difference in milli-arcseconds in RA and then Dec\n",
-      "  [-2.55795385e-06 -2.96722646e-06] [8.76099193e-07 8.12150347e-07]\n"
+      "  [-3.06954462e-07 -4.09272616e-07] [5.75539616e-08 1.02318154e-07]\n"
      ]
     }
    ],
@@ -440,7 +444,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -454,7 +458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
