--- a/DBConnectionTimes.ipynb
+++ b/DBConnectionTimes.ipynb
@@ -38,7 +38,7 @@
     "            self.url = make_url(dbinfo)\n",
     "        else:\n",
     "            if not os.path.exists(dbinfo):\n",
-    "                FileExistsError(f\"Cannot find existing database at {dbinfo}\")\n",
+    "                raise FileExistsError(f\"Cannot find existing database at {dbinfo}\")\n",
     "            self.url = make_url(\"sqlite:///\" + dbinfo)\n",
     "        # connection and save connection\n",
     "        self.engine = create_engine(self.url)\n",
@@ -85,7 +85,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.59 s ± 85.7 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "5.46 s ± 70.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -117,7 +117,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.09 s ± 88.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "6.13 s ± 174 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.03 s ± 41 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "6.02 s ± 59.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -191,7 +191,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.93 s ± 44 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "5.86 s ± 28.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -215,7 +215,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.23 s ± 227 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "5.88 s ± 38.9 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -239,7 +239,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.9 s ± 227 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "6.44 s ± 36 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -273,7 +273,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.99 s ± 76 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "5.91 s ± 43.8 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
@@ -295,7 +295,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6.06 s ± 88.6 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "5.92 s ± 74 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
