notebook exploring snapshot pickle times

--- a/snapshot_times.ipynb
+++ b/snapshot_times.ipynb
@@ -1005,11 +1005,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "4107be27-4def-4285-be0f-817de74b37ec",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sched.update_conditions(conditions)\n",
+    "obs = sched.request_observation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "7bb47b3f-b602-476b-8bf2-c1d3bb0ab7e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([(0, 2.13775407, -0.63130166, 0., 60437.041875, 120., 'g', 0.10317551, 0., 1, 0., 0., 0., 0., 0., 0, 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 'AUXTEL_PHOTO_IMAGING:Photo0800-1_012', '', 0, 0, 0, 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0)],\n",
+       "      dtype=[('ID', '<i8'), ('RA', '<f8'), ('dec', '<f8'), ('mjd', '<f8'), ('flush_by_mjd', '<f8'), ('exptime', '<f8'), ('filter', '<U40'), ('rotSkyPos', '<f8'), ('rotSkyPos_desired', '<f8'), ('nexp', '<i8'), ('airmass', '<f8'), ('FWHM_500', '<f8'), ('FWHMeff', '<f8'), ('FWHM_geometric', '<f8'), ('skybrightness', '<f8'), ('night', '<i8'), ('slewtime', '<f8'), ('visittime', '<f8'), ('slewdist', '<f8'), ('fivesigmadepth', '<f8'), ('alt', '<f8'), ('az', '<f8'), ('pa', '<f8'), ('clouds', '<f8'), ('moonAlt', '<f8'), ('sunAlt', '<f8'), ('note', '<U40'), ('target', '<U40'), ('field_id', '<i8'), ('survey_id', '<i8'), ('block_id', '<i8'), ('lmst', '<f8'), ('rotTelPos', '<f8'), ('rotTelPos_backup', '<f8'), ('moonAz', '<f8'), ('sunAz', '<f8'), ('sunRA', '<f8'), ('sunDec', '<f8'), ('moonRA', '<f8'), ('moonDec', '<f8'), ('moonDist', '<f8'), ('solarElong', '<f8'), ('moonPhase', '<f8'), ('cummTelAz', '<f8'), ('scripted_id', '<i8')])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "obs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ce537570-f632-4800-8a2a-48f327adcb5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 75]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<FieldSurvey survey_name='AUXTEL_PHOTO_IMAGING', RA=[2.13786835], dec=[-0.63128559] at 0x1a3d0af90>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(sched.survey_index)\n",
+    "winner = sched.survey_lists[sched.survey_index[0]][sched.survey_index[1]]\n",
+    "winner"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68fbcf23-94cb-4041-a4eb-beb6b731a2de",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Hmm - and this \"winner\" does not match the target requested. "
+   ]
   }
  ],
  "metadata": {
