Cleaned up SlewModelComparison more

--- a/SlewModelComparison.ipynb
+++ b/SlewModelComparison.ipynb
@@ -66,14 +66,10 @@
     "                   'emergencyJerkLimit': 'jerk',\n",
     "                   'drivesEnabled': 'drivesEnabled'}\n",
     "    fields = list(rot_mapping.keys())\n",
+    "    rot_start = await efd_client.select_top_n(topic, fields, num=1, time_cut=t_start.isot)\n",
     "    rot = await efd_client.select_time_series(topic, fields, t_start, t_end)\n",
+    "    rot = pd.concat([rot_start, rot])\n",
     "    rot.query('drivesEnabled == 1.0', inplace=True)\n",
-    "    ts = t_start\n",
-    "    while len(rot) == 0 or rot.index.min() > t_start:\n",
-    "        # Go further back in time to find the state\n",
-    "        ts = ts - TimeDelta(3, format='jd')\n",
-    "        rot = await efd_client.select_time_series(topic, fields, ts, t_end)\n",
-    "        rot.query('drivesEnabled == 1.0', inplace=True)\n",
     "    rot.rename(rot_mapping, axis=1, inplace=True)\n",
     "    # Make sure a value is in place for t_start\n",
     "    index_edges = [pd.to_datetime(t_start.utc.datetime).tz_localize(\"UTC\"),\n",
@@ -95,12 +91,9 @@
     "              'maxMoveAcceleration': 'altitude_accel',\n",
     "              'maxMoveJerk': 'altitude_jerk'}\n",
     "    fields = list(el_mapping.keys())\n",
+    "    elevation_start = await efd_client.select_top_n(topic, fields, num=1, time_cut=t_start.isot)\n",
     "    elevation = await efd_client.select_time_series(topic, fields, t_start, t_end)\n",
-    "    ts = t_start\n",
-    "    while len(elevation) == 0 or elevation.index.min() > t_start:\n",
-    "        # Go further back in time to find the state\n",
-    "        ts = ts - TimeDelta(1, format='jd')\n",
-    "        elevation = await efd_client.select_time_series(topic, fields, ts, t_end)\n",
+    "    elevation = pd.concat([elevation_start, elevation])\n",
     "    elevation.rename(el_mapping, axis=1, inplace=True)\n",
     "    # Get azimuth limits\n",
     "    topic = 'lsst.sal.MTMount.logevent_azimuthControllerSettings'\n",
@@ -110,12 +103,9 @@
     "              'maxMoveAcceleration': 'azimuth_accel',\n",
     "              'maxMoveJerk': 'azimuth_jerk'}\n",
     "    fields = list(az_mapping.keys())\n",
+    "    azimuth_start = await efd_client.select_top_n(topic, fields, num=1, time_cut=t_start.isot)\n",
     "    azimuth = await efd_client.select_time_series(topic, fields, t_start, t_end)\n",
-    "    ts = t_start\n",
-    "    while len(azimuth) == 0 or azimuth.index.min() > t_start:\n",
-    "        # Go further back in time to find the state\n",
-    "        ts = ts - TimeDelta(1, format='jd')\n",
-    "        azimuth = await efd_client.select_time_series(topic, fields, ts, t_end)\n",
+    "    azimuth = pd.concat([azimuth_start, azimuth])\n",
     "    azimuth.rename(az_mapping, axis=1, inplace=True)\n",
     "    # First be sure we can come up with a value in place for t_start\n",
     "    index_edges = [pd.to_datetime(t_start.utc.datetime).tz_localize(\"UTC\"),\n",
@@ -881,14 +871,6 @@
     "\n",
     "fig.subplots_adjust(hspace=0)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1d661ace-1086-4d55-989d-c7ac932c7230",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
